[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PrettyGit"
version = "22.0.0"
authors = [
  { name="gmanka", email="gmankab@gmail.com" },
]
description = "very simple and user friendly interface for git"
readme = "readme.md"
license = { file="readme.md" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: gnu gpl 3 https://gnu.org/licenses/gpl-3.0.en.html",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gmankab/PrettyGit"
"Bug Tracker" = "https://github.com/gmankab/PrettyGit/issues"