[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
  "gmanka_yml==23.0.4",
  "easyselect==23.0.0",
  "betterdata==23.0.2",
  "hatchling",
  "twine",
  "rich",
]
name = "PrettyGit"
version = "23.0.4"
authors = [
  { name="gmanka", email="gmankab@gmail.com" },
]
description = "very simple and user friendly interface for git"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gmankab/PrettyGit"
"Bug Tracker" = "https://github.com/gmankab/PrettyGit/issues"
"Documentation" = "https://github.com/gmankab/PrettyGit"
